--- a/style_print.css
+++ b/style_print.css
@@ -37,3 +37,7 @@ pre
 {
     display: none;
 }
+a, a:visited
+{
+    text-decoration: none;
+}
